# Peechi

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: 0.1.0.md  0.1.1.md
examples/: 0.1.0_core_en-us.pee  0.1.0_nucleo_pt-br.pee  0.1.1_core_en-us.pee  0.1.1_nucleo_pt-br.pee
future/low_level_c/: README.md
include/peechi/ast/: Expr.hpp  Stmt.hpp
include/peechi/cli/: Cli.hpp
include/peechi/core/: SourceFile.hpp  Version.hpp
include/peechi/diagnostics/: PeechiError.hpp
include/peechi/lexer/: Lexer.hpp  Token.hpp
include/peechi/parser/: Parser.hpp
include/peechi/runtime/: Environment.hpp  Interpreter.hpp  Value.hpp
src/: main.cpp
src/ast/: Expr.cpp  Stmt.cpp
src/cli/: Cli.cpp
src/core/: SourceFile.cpp
src/diagnostics/: PeechiError.cpp
src/lexer/: Lexer.cpp  Token.cpp
src/parser/: Parser.cpp
src/runtime/: Environment.cpp  Interpreter.cpp  Value.cpp
